tests/reference/asr-complex_07-71c3c47.stderr
semantic error: Too many arguments to call `dcmplx`
  --> tests/../integration_tests/complex_07.f90:17:10
   |
17 |     x2 = dcmplx(real_part)
   |          ^^^^^^^^^^^^^^^^^ 
